@@ -167,18 +167,19 @@ void new_instance(CPlugin * instance, int16_t argc, char *argn[], char *argv[])
 
             if (g_ascii_strcasecmp(argn[i], "qtsrc") == 0) {
                 item = g_new0(ListItem, 1);
-                /*
-                tmp = g_strrstr(src->src, "/");
-                if (tmp) {
-                    g_strlcpy(item->src, src->src, 1024);
-                    tmp = g_strrstr(item->src, "/");
-                    tmp[1] = '\0';
-                    g_strlcat(item->src, argv[i], 4096);
+                tmp = g_strrstr(argv[i], "://");
+                if (!tmp) {
+                    if (instance->page_url != NULL) {
+                        //printf("page_url = %s\n", instance->page_url);
+                        g_strlcpy(item->src, instance->page_url, 1024);
+                        tmp = g_strrstr(item->src, "/");
+                        tmp[1] = '\0';
+                        //printf("item->src = %s\n", item->src);
+                        g_strlcat(item->src, argv[i], 4096);
+                    }
                 } else {
                     g_strlcpy(item->src, argv[i], 4096);
                 }
-                */
-                g_strlcpy(item->src, argv[i], 4096);
                 item->streaming = streaming(item->src);
                 item->play = TRUE;
                 item->id = instance->nextid++;
@@ -481,6 +482,8 @@ void new_instance(CPlugin * instance, int16_t argc, char *argn[], char *argv[])
     if (force_streaming) {
         item->streaming = TRUE;
         src->streaming = TRUE;
+        if (qtsrc)
+            qtsrc->streaming = TRUE;
     }
 //    if (g_ascii_strcasecmp(instance->mimetype,"video/x-flv") == 0) {
 //      item->streaming = TRUE;
